# kdev-zig

./: .gitignore  CMakeLists.txt  README.md  astdebug.zig  example_ast.zig  kdevzigsupport.categories  kdevzigsupport.json  zighighlighting.cpp  zighighlighting.h  ziglanguagesupport.cpp  ziglanguagesupport.h  zigparsejob.cpp  zigparsejob.h
app_templates/: CMakeLists.txt
app_templates/zig_binary/: build.zig  zig_binary.kdevtemplate
app_templates/zig_library/: build.zig  zig_library.kdevtemplate
cmake/: FindZig.cmake
codecompletion/: CMakeLists.txt  completioncontext.cpp  completionmodel.cpp  completionmodel.h  completionworker.cpp  completionworker.h  context.cpp  context.h  item.cpp  item.h  model.cpp  model.h  worker.cpp  worker.h
codecompletion/tests/: CMakeLists.txt  completiontest.cpp  completiontest.h
duchain/: CMakeLists.txt  contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  delayedtypevisitor.h  expressionvisitor.cpp  expressionvisitor.h  functionvisitor.cpp  functionvisitor.h  helpers.cpp  helpers.h  kdevzigastparser.h  kdevzigastparser.zig  nodetraits.h  parsesession.cpp  parsesession.h  usebuilder.cpp  usebuilder.h  visitor.cpp  visitor.h  zigducontext.cpp  zigducontext.h  zignode.cpp  zignode.h
duchain/navigation/: navigationwidget.cpp  navigationwidget.h
duchain/tests/: CMakeLists.txt  duchaintest.cpp  duchaintest.h
duchain/tests/data/: a.zig  b.zig  c.zig
duchain/tests/data/basic_import/: a.zig  b.zig
duchain/tests/data/duplicate_import/: config_a.zig  config_b.zig  main.zig
duchain/tests/data/this_import/: A.zig  main.zig
duchain/types/: builtintype.cpp  builtintype.h  comptimetype.cpp  comptimetype.h  declarationtypes.h  delayedtype.cpp  delayedtype.h  enumtype.cpp  enumtype.h  errortype.cpp  errortype.h  optionaltype.cpp  optionaltype.h  pointertype.cpp  pointertype.h  slicetype.cpp  slicetype.h  uniontype.cpp  uniontype.h  vectortype.cpp  vectortype.h
projectconfig/: projectconfig.ui  projectconfigpage.cpp  projectconfigpage.h
